externalDlls/libnodave/setport.h

EXPORTSPEC HANDLE __stdcall setPort(char * name, char* baud,char parity);
EXPORTSPEC int __stdcall closePort(HANDLE port);
int setPort(char * name, char* baud, char parity);
int closePort(int port);