LibNoDaveConnectionLibrary/Communication/LibNoDave/libnodave.net.cs


#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "_daveSetupReceivedPDU")]
#else
            [DllImport("__Internal", EntryPoint = "_daveSetupReceivedPDU")]
#endif
            private static extern int _daveSetupReceivedPDU32(IntPtr dc, IntPtr p);

            public int daveRecieveData(out byte[] data, out byte[] param)
            {
                int res = 0;
                if (IntPtr.Size == 8)
                    res = daveGetResponse64(pointer);
                else
                    res = daveGetResponse32(pointer);

                PDU myPDU = new PDU();
                if (IntPtr.Size == 8)
                    _daveSetupReceivedPDU64(pointer, myPDU.pointer);
                else
                    _daveSetupReceivedPDU32(pointer, myPDU.pointer);

                byte[] tmp1 = new byte[65536];
                byte[] tmp2 = new byte[65536];
                int ltmp1 = 0;
                int ltmp2 = 0;

                if (IntPtr.Size == 8)
                    res = daveGetPDUData64(pointer, myPDU.pointer, tmp1, ref ltmp1, tmp2, ref ltmp2);
                else
                    res = daveGetPDUData32(pointer, myPDU.pointer, tmp1, ref ltmp1, tmp2, ref ltmp2);

                data = new byte[ltmp1];
                param = new byte[ltmp2];
                Array.Copy(tmp1, data, ltmp1);
                Array.Copy(tmp2, param, ltmp2);
                return res;
            }

        }

        public class PDU : pseudoPointer
        {
#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveNewPDU")]
#else
            [DllImport("__Internal", EntryPoint = "daveNewPDU")]
#endif
            protected static extern IntPtr daveNewPDU64();

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveNewPDU")]
#else
            [DllImport("__Internal", EntryPoint = "daveNewPDU")]
#endif
            protected static extern IntPtr daveNewPDU32();

            public PDU()
            {
                if (IntPtr.Size == 8)
                    pointer = daveNewPDU64();
                else
                    pointer = daveNewPDU32();
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveAddVarToReadRequest")]
#else
            [DllImport("__Internal", EntryPoint = "daveAddVarToReadRequest")]
#endif
            protected static extern void daveAddVarToReadRequest64(IntPtr p, int area, int DBnum, int start, int bytes);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveAddVarToReadRequest")]
#else
            [DllImport("__Internal", EntryPoint = "daveAddVarToReadRequest")]
#endif
            protected static extern void daveAddVarToReadRequest32(IntPtr p, int area, int DBnum, int start, int bytes);
            public void addVarToReadRequest(int area, int DBnum, int start, int bytes)
            {
                if (IntPtr.Size == 8)
                    daveAddVarToReadRequest64(pointer, area, DBnum, start, bytes);
                else
                    daveAddVarToReadRequest32(pointer, area, DBnum, start, bytes);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveAddBitVarToReadRequest")]
#else
            [DllImport("__Internal", EntryPoint = "daveAddBitVarToReadRequest")]
#endif
            protected static extern void daveAddBitVarToReadRequest64(IntPtr p, int area, int DBnum, int start, int bytes);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveAddBitVarToReadRequest")]
#else
            [DllImport("__Internal", EntryPoint = "daveAddBitVarToReadRequest")]
#endif
            protected static extern void daveAddBitVarToReadRequest32(IntPtr p, int area, int DBnum, int start, int bytes);
            public void addBitVarToReadRequest(int area, int DBnum, int start, int bytes)
            {
                if (IntPtr.Size == 8)
                    daveAddBitVarToReadRequest64(pointer, area, DBnum, start, bytes);
                else
                    daveAddBitVarToReadRequest32(pointer, area, DBnum, start, bytes);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveAddVarToWriteRequest")]
#else
            [DllImport("__Internal", EntryPoint = "daveAddVarToWriteRequest")]
#endif
            protected static extern void daveAddVarToWriteRequest64(IntPtr p, int area, int DBnum, int start, int bytes, byte[] buffer);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveAddVarToWriteRequest")]
#else
            [DllImport("__Internal", EntryPoint = "daveAddVarToWriteRequest")]
#endif
            protected static extern void daveAddVarToWriteRequest32(IntPtr p, int area, int DBnum, int start, int bytes, byte[] buffer);
            public void addVarToWriteRequest(int area, int DBnum, int start, int bytes, byte[] buffer)
            {
                if (IntPtr.Size == 8)
                    daveAddVarToWriteRequest64(pointer, area, DBnum, start, bytes, buffer);
                else
                    daveAddVarToWriteRequest32(pointer, area, DBnum, start, bytes, buffer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveAddBitVarToWriteRequest")]
#else
            [DllImport("__Internal", EntryPoint = "daveAddBitVarToWriteRequest")]
#endif
            protected static extern void daveAddBitVarToWriteRequest64(IntPtr p, int area, int DBnum, int start, int bytes, byte[] buffer);

#if !IPHONE	
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveAddBitVarToWriteRequest")]
#else
            [DllImport("__Internal", EntryPoint = "daveAddBitVarToWriteRequest")]
#endif
            protected static extern void daveAddBitVarToWriteRequest32(IntPtr p, int area, int DBnum, int start, int bytes, byte[] buffer);
            public void addBitVarToWriteRequest(int area, int DBnum, int start, int bytes, byte[] buffer)
            {
                if (IntPtr.Size == 8)
                    daveAddBitVarToWriteRequest64(pointer, area, DBnum, start, bytes, buffer);
                else
                    daveAddBitVarToWriteRequest32(pointer, area, DBnum, start, bytes, buffer);
            }
        } // class PDU

        public class resultSet : pseudoPointer
        {

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveNewResultSet")]
#else
            [DllImport("__Internal", EntryPoint = "daveNewResultSet")]
#endif
            protected static extern IntPtr daveNewResultSet64();

#if !IPHONE
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveNewResultSet")]
#else
            [DllImport("__Internal", EntryPoint = "daveNewResultSet")]
#endif
            protected static extern IntPtr daveNewResultSet32();
            public resultSet()
            {
                if (IntPtr.Size == 8)
                    pointer = daveNewResultSet64();
                else
                    pointer = daveNewResultSet32();
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveFreeResults")]
#else
            [DllImport("__Internal", EntryPoint = "daveFreeResults")]
#endif
            protected static extern void daveFreeResults64(IntPtr rs);

#if !IPHONE
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveFreeResults")]
#else
            [DllImport("__Internal", EntryPoint = "daveFreeResults")]
#endif
            protected static extern void daveFreeResults32(IntPtr rs);
            ~resultSet()
            {
                if (IntPtr.Size == 8)
                    daveFreeResults64(pointer);
                else
                    daveFreeResults32(pointer);
            }

#if !IPHONE
            [DllImport("libnodave_jfkmod64.dll", EntryPoint = "daveGetErrorOfResult")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetErrorOfResult")]
#endif
            protected static extern int daveGetErrorOfResult64(IntPtr rs, int number);

#if !IPHONE
            [DllImport("libnodave_jfkmod.dll", EntryPoint = "daveGetErrorOfResult")]
#else
            [DllImport("__Internal", EntryPoint = "daveGetErrorOfResult")]
#endif
            protected static extern int daveGetErrorOfResult32(IntPtr rs, int number);
            public int getErrorOfResult(int number)
            {
                if (IntPtr.Size == 8)
                    return daveGetErrorOfResult64(pointer, number);
                return daveGetErrorOfResult32(pointer, number);
            }

        }

#if !IPHONE
        [DllImport("libnodave_jfkmod64.dll", EntryPoint = "setPort")]
#else
        [DllImport("__Internal", EntryPoint = "setPort")]
#endif
        public static extern IntPtr setPort64([MarshalAs(UnmanagedType.LPStr)] string portName, [MarshalAs(UnmanagedType.LPStr)] string baud, int parity);

#if !IPHONE
        [DllImport("libnodave_jfkmod.dll", EntryPoint = "setPort")]
#else
        [DllImport("__Internal", EntryPoint = "setPort")]
#endif
        public static extern IntPtr setPort32([MarshalAs(UnmanagedType.LPStr)] string portName, [MarshalAs(UnmanagedType.LPStr)] string baud, int parity);

        public static IntPtr setPort(string portName, string baud, int parity)
        {
            if (IntPtr.Size == 8)
                return setPort64(portName, baud, parity);
            return setPort32(portName, baud, parity);
        }

#if !IPHONE
        [DllImport("libnodave_jfkmod64.dll", EntryPoint = "openSocket")]
#else
        [DllImport("__Internal", EntryPoint = "openSocket")]
#endif
        protected static extern IntPtr openSocket64(
            int port,
            [MarshalAs(UnmanagedType.LPStr)] string portName
            );

#if !IPHONE	
        [DllImport("libnodave_jfkmod.dll", EntryPoint = "openSocket")]
#else
        [DllImport("__Internal", EntryPoint = "openSocket")]
#endif
        protected static extern IntPtr openSocket32(
            int port,
            [MarshalAs(UnmanagedType.LPStr)] string portName
            );

        public static IntPtr openSocket(int port, string portName)
        {
            if (IntPtr.Size == 8)
                return openSocket64(port, portName);
            return openSocket32(port, portName);
        }

#if !IPHONE	
        [DllImport("libnodave_jfkmod.dll"/*, PreserveSig=false */ )]
        public static extern IntPtr openS7online(
            [MarshalAs(UnmanagedType.LPStr)] string portName,
            int hwnd
            );
#else
        public static int openS7online(string portName, int hwnd) { return 0; }
#endif

#if !IPHONE
        [DllImport("S7onlinx.dll" /*, PreserveSig=false */ )]
        private static extern int SCP_get_errno();
#else
        private static int SCP_get_errno() { return 0; }
#endif


#if !IPHONE
        [DllImport("libnodave_jfkmod64.dll", EntryPoint = "closePort")]
#else
        [DllImport("__Internal", EntryPoint = "closePort")]
#endif
        protected static extern int closePort64(IntPtr port);

#if !IPHONE
        [DllImport("libnodave_jfkmod.dll", EntryPoint = "closePort")]
#else
        [DllImport("__Internal", EntryPoint = "closePort")]
#endif
        protected static extern int closePort32(IntPtr port);

        public static int closePort(IntPtr port)
        {
            if (IntPtr.Size == 8)
                return closePort64(port);
            return closePort32(port);
        }

#if !IPHONE
        [DllImport("libnodave_jfkmod64.dll", EntryPoint = "closeSocket")]
#else
        [DllImport("__Internal", EntryPoint = "closeSocket")]
#endif
        protected static extern int closeSocket64(IntPtr port);
